--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="dd"></div>
     <script src="./js/myJs.js"></script>
 </body>
 </html>
